# Nervous-Brain

./: .gitattributes  .gitignore  README.md  bootstrap_qdrant_server.sh  config.yaml.example  docker-compose.qdrant.yml  environment.yml  pyproject.toml  restart_telegram_bot.ps1  restart_telegram_bot.sh
docs/: README.md  configuration.md  deployment.md  mcp.md  retrieval-data.md  runtime-operations.md  testing-and-acceptance.md  troubleshooting.md
evaluation/: README.md  human_collected_cases.jsonl  week7_multiturn_eval.jsonl
scripts/: agent_rag_db_demo.py  chat_cli_demo.py  demo_answer.py  demo_ask_user.py  export_telegram_feedback_summary.py  full_graph_demo.py  migrate_qdrant_server_from_archive.py  product_e2e_demo.py  retrieval_ingest_demo.py  retrieval_query_demo.py  run_discord_bot.py  run_discourse_crawl.py  run_github_code_ingest.py  run_github_docs_ingest.py  run_jsonl_ingest.py  run_talk_forum_ingest.py  run_talk_mcp_server.py  run_telegram_bot_polling.py  run_telegram_mcp_server.py  run_web_text_ingest.py  test_glm_api.py  tg_offline_pipeline_demo.py
tests/: test_composite_retriever.py  test_discord_bot_protocol_adapter.py  test_discord_bot_runtime.py  test_discourse_crawler.py  test_discourse_parallel.py  test_evaluation_dataset.py  test_feedback.py  test_full_graph.py  test_github_code_crawler.py  test_github_docs_crawler.py  test_github_incremental_ingest.py  test_github_ingest_timer_templates.py  test_ingestion_pipeline.py  test_init.py  test_logging_system.py  test_m3_smoke.py  test_memory_service.py  test_pathing.py  test_platform_formatter.py  (+14 more)
(+91 files in other folders)
